fix redirecting script not working

--- a/packages/site/astro-test/src/layouts/_Head.astro
+++ b/packages/site/astro-test/src/layouts/_Head.astro
@@ -17,5 +17,7 @@ const { title, lang } = Astro.props;
     href='/favicon.svg'
     type='image/svg+xml'>
   <title>{title} | {i18n.get('siteName')!.get(lang)!}</title>
-  <script src='./_Head.ts'></script>
+  <script>
+  import '@monochromatic-dev/module-dom/redirectingTo.ts';
+  </script>
 </head>
