--- a/packages/site/astro-test/src/components/Posts.astro
+++ b/packages/site/astro-test/src/components/Posts.astro
@@ -15,9 +15,9 @@ const { posts, lang } = Astro.props;
 
   grid-template-columns: repeat(auto-fit, minmax(calc(var(--min-text) * var(--rp)), 1fr));
 
-  column-gap: calc(var(--gap-l) * var(--rp));
+  column-gap: calc(var(--gap-xxl) * var(--rp));
 
-  row-gap: calc(var(--gap-l) * var(--rp));
+  row-gap: calc(var(--gap-xxl) * var(--rp));
 
   inline-size: 100%;
 }
