--- a/packages/site/astro-test/src/layouts/_Head.css
+++ b/packages/site/astro-test/src/layouts/_Head.css
@@ -1,5 +1,51 @@
 @import '@monochromatic-dev/style-monochromatic/.css';
 
+@font-face {
+  font-family: inter;
+
+  src:
+    local('Inter Variable'),
+    url('/inter.woff2') format('woff2-variations');
+
+  font-weight: 1 1000;
+
+  font-stretch: 50% 200%;
+
+  font-style: normal;
+
+  font-display: fallback;
+}
+
+@font-face {
+  font-family: inter;
+
+  src:
+    local('Inter Variable'),
+    url('/interItalic.woff2') format('woff2-variations');
+
+  font-weight: 1 1000;
+
+  font-stretch: 50% 200%;
+
+  font-style: italic;
+
+  font-display: swap;
+}
+
+@font-face {
+  font-family: monaspaceNeon;
+
+  src:
+    local('Monaspace Neon'),
+    url('/monaspaceNeon.woff2') format('woff2-variations');
+
+  font-weight: 1 1000;
+
+  font-stretch: 50% 200%;
+
+  font-display: swap;
+}
+
 html {
   background-image:
     radial-gradient(at 0% 75%, #d7c1f5 0, transparent 50%),
