--- a/packages/style/monochromatic/src/global.css
+++ b/packages/style/monochromatic/src/global.css
@@ -75,10 +75,8 @@ button {
   @mixin --button-text;
 }
 
-img {
+:is(img, iframe) {
   max-inline-size: 100%;
-
-  block-size: auto;
 }
 
 @counter-style dash {
