--- a/packages/site/astro-test/src/layouts/_Head.astro
+++ b/packages/site/astro-test/src/layouts/_Head.astro
@@ -1,10 +1,10 @@
 ---
 import './_Head.css';
 import { i18n } from '@_/index.ts';
-interface Props {
+type Props = {
   title: string;
   lang: string;
-}
+};
 const { title, lang } = Astro.props;
 ---
 <head>
@@ -18,6 +18,8 @@ const { title, lang } = Astro.props;
     type='image/svg+xml'>
   <title>{title} | {i18n.get('siteName')!.get(lang)!}</title>
   <script>
-  import '@monochromatic-dev/module-dom/redirectingTo.ts';
+  import { onLoadRedirectingTo } from '@monochromatic-dev/module-es';
+
+  onLoadRedirectingTo();
   </script>
 </head>
